# polars_istr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
examples/: basics.ipynb
python/polars_istr/: __init__.py  _utils.py  cusip.py  iban.py  isin.py  type_alias.py  url.py
python/polars_standards/: __init__.py  cusip.py  iban.py  isin.py  type_alias.py
src/: lib.rs
src/cusip_parsing/: mod.rs
src/iban_parsing/: mod.rs
src/isin_parsing/: mod.rs
src/url_parsing/: mod.rs
src/utils/: mod.rs
tests/: requirements-test.txt  test_correctness.py
