[package]
name = "polars_istr"
version = "0.1.0"
edition = "2021"

[lib]
name = "_polars_istr"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "*", features = ["extension-module", "abi3-py38"]}
pyo3-polars = {version = "0.12", features = ["derive"]}
polars = {version = "0.38.3", features = ["performant", "lazy", "nightly", "parquet"]}
iban_validate = "4.0.1"
isin = "0.1.18"
cusip = "0.3.0"
url = "2.5.0"

[target.'cfg(any(not(target_os = "linux"), use_mimalloc))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
 
[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[profile.release]
codegen-units = 1
strip = "symbols" 
lto = "fat"
