[package]
name = "polars_istr"
version = "0.1.2"
edition = "2021"

[lib]
name = "_polars_istr"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.23", features = ["extension-module", "abi3-py38"]}
pyo3-polars = {version = "0.20", features = ["derive"]}
polars = {version = "0.46", features = ["performant", "lazy", "nightly", "parquet"]}
iban_validate = "4.0.1"
isin = "0.1.18"
cusip = "0.3.0"
url = "2.5.0"
polars-arrow = "0.46.0"

[profile.release]
codegen-units = 1
strip = "symbols" 
lto = "fat"
