[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "polars_istr"
requires-python = ">=3.8"
version = "0.1.1"

license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
authors = [
    {name = "Tianren Qin", email = "tq9695@gmail.com"},
    {name = "Connor Duncan", email = "connor@connorduncan.xyz"},
]
dependencies = [
    "polars >= 0.20.6, !=0.20.12",
] 

keywords = ["polars-extension", "string-processing", "data-processing", "parsing"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "polars_istr._polars_istr"

[project.optional-dependencies]
dev = [
    "pytest >= 7.4.1",
    "pre-commit",
]

[tool.ruff]
line-length = 100
fix = true
src = ["python"]
